--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
   #  url: jdbc:mysql://localhost:3306/chatdb?useSSL=false
-    url: jdbc:mysql:/52.79.184.149:3306/mydatabase?useSSL=false
+    url: jdbc:mysql://52.79.184.149:3306/mydatabase?useSSL=false
     username: root
     password: 258025
   jpa:
